--- a/index.css
+++ b/index.css
@@ -1,3 +1,97 @@
-#root{
-    background-color: rgb(129, 159, 185);
+/* Reduce the size of the scrollbar */
+::-webkit-scrollbar {
+    width: 6px;
+    height: 6px !important;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+  }
+  
+  /* Adjust the scrolling effect */
+  body {
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+    scrollbar-width: thin; /* For Firefox */
+    scrollbar-color: #888 #f1f1f1; /* For Firefox */
+  }
+  
+
+.header {
+    border: 2px solid #f0f0f0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 100px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #f0f0f0;
+    z-index: 999;
+    font-family: 'Roboto', sans-serif;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.header>ul {
+    display: flex;
+    list-style: none;
+    padding-right: 150px;
+}
+
+.header>ul>li {
+    padding: 13px 30px 13px 30px;
+    font-size: 18px;
+    color: #7a7a7a;
+}
+.header>ul>li:hover{
+    cursor: pointer;
+    color: #333;
+    transition: background-color 0.2s ease-in-out;
+}
+.logo >img{
+    padding-left: 100px;
+    width: 130px;
+    height: 35px;
+    margin-top: 2px;
+}
+.body {
+    background-color: #FFFFFF;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding-top: 150px;
+    margin-left: 100px;
+    margin-right: 80px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+}
+
+.card {
+    border: 2px solid #F5F5F5;
+    background-color: #F5F5F5;
+    padding: 17px;
+    margin: 20px;
+    width: 240px;
+    height: 330px;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
+}
+
+.card>img {
+    width: 100%;
+}
+.card > h5 {
+    display: flex;
+    justify-content: space-between;
 }
