--- a/index.css
+++ b/index.css
@@ -1,27 +1,20 @@
-/* Reduce the size of the scrollbar */
 ::-webkit-scrollbar {
     width: 6px;
     height: 6px !important;
-  }
-  
-  ::-webkit-scrollbar-thumb {
+}
+::-webkit-scrollbar-thumb {
     background-color: #888;
     border-radius: 10px;
-  }
-  
-  ::-webkit-scrollbar-track {
+}
+::-webkit-scrollbar-track {
     background-color: #f1f1f1;
-  }
-  
-  /* Adjust the scrolling effect */
-  body {
+}
+body {
     overflow-y: scroll;
     scroll-behavior: smooth;
-    scrollbar-width: thin; /* For Firefox */
-    scrollbar-color: #888 #f1f1f1; /* For Firefox */
-  }
-  
-
+    scrollbar-width: thin;
+    scrollbar-color: #888 #f1f1f1;
+}
 .header {
     border: 2px solid #f0f0f0;
     display: flex;
@@ -37,24 +30,46 @@
     font-family: 'Roboto', sans-serif;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
 }
-
 .header>ul {
     display: flex;
     list-style: none;
     padding-right: 150px;
 }
-
-.header>ul>li {
-    padding: 13px 30px 13px 30px;
+.header > ul > li:not(:first-child) {
+    padding: 13px 40px 13px 10px;
     font-size: 18px;
     color: #7a7a7a;
 }
-.header>ul>li:hover{
+.header > ul > li:not(:first-child){
     cursor: pointer;
     color: #333;
     transition: background-color 0.2s ease-in-out;
 }
-.logo >img{
+.header > ul > li:first-child{
+    margin-right: 40px;
+}
+.header>ul>li>input {
+    /* width: 400px; */
+    padding: 15px 0px 15px 0px;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    font-weight: 400;
+    background-color: #f7f7f7;
+    color: #333;
+    left: 0;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease;
+}
+.header>ul>li>input::placeholder {
+    transform: translateX(15px);
+  }
+.header>ul>li>input:focus{
+    background-color: #fff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+.logo>img {
     padding-left: 100px;
     width: 130px;
     height: 35px;
@@ -71,7 +86,6 @@
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
 }
-
 .card {
     border: 2px solid #F5F5F5;
     background-color: #F5F5F5;
@@ -82,16 +96,14 @@
     border-radius: 5px;
     transition: all 0.3s ease;
 }
-
 .card:hover {
     transform: translateY(-5px);
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
 }
-
 .card>img {
     width: 100%;
 }
-.card > h5 {
+.card>h5 {
     display: flex;
     justify-content: space-between;
 }
